--- a/fundamentals/02-css/lesson-02-intermediate.html
+++ b/fundamentals/02-css/lesson-02-intermediate.html
@@ -52,7 +52,7 @@
 <body>
 
 	<header>
-		<h1># lesson-02-intermediate</h1>
+		<h1>LESSON 02: CSS INTERMEDIATE</h1>
 	</header>
 
 	<main>
@@ -61,217 +61,217 @@
 		-->
 		<section>
 			<h1>Box Sizing</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Width</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Height</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Dimension</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Max Inline Size</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Min Inline Size</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Max Block Size</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Min Block Size</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Overflow</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Visibility</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Scrollbars</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Zndex</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Position</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Positioning</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Bottom</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Float</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Clearfix</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Dropdowns</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Navbar</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Overlay</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Forms</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Align</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Buttons</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Image Sprites</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Multi Background</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Gradients</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Box Shadow</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Box Decoration Break</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Border Images</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Border Block</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Border Inline</h1>
-		</section>
+		</section><hr>
 
 	</main>
 
