--- a/fundamentals/02-css/lesson-03-advanced.html
+++ b/fundamentals/02-css/lesson-03-advanced.html
@@ -52,219 +52,191 @@
 <body>
 
 	<header>
-		<h1># lesson-03-advanced</h1>
+		<h1>LESSON 03: CSS ADVANCED</h1>
 	</header>
 
-	<main>
-		<!-- 
-
-		-->
-		<section>
-			<h1>Attr Selectors</h1>
-		</section>
-		
-		<!-- 
-
-		-->
-		<section>
-			<h1>Combinators</h1>
-		</section>
-		
-		<!-- 
-
-		-->
-		<section>
-			<h1>Pseudo Classes</h1>
-		</section>
-		
-		<!-- 
-
-		-->
-		<section>
-			<h1>Pseudo Elements</h1>
-		</section>
-		
+	<main>		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Hover</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Focus</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Transition</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>2d transform</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>3d transform</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Translate</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Animation</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Zoom</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Resize</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Arrows</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Quotes</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Order</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Flexbox</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Text Effects</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Text Shadow</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Caret Color</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Tooltips</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Loaders</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Pagination</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Counters</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Clip</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Shapes</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Masking</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Style Images</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Grid</h1>
-		</section>
+		</section><hr>
 		
 		<!-- 
 
 		-->
 		<section>
 			<h1>Grid Layout</h1>
-		</section>
+		</section><hr>
 		
 	</main>
 
