--- a/fundamentals/02-css/lesson-04-professional.html
+++ b/fundamentals/02-css/lesson-04-professional.html
@@ -52,7 +52,7 @@
 <body>
 
 	<header>
-		<h1># lesson-04-professional</h1>
+		<h1>LESSON 04: PROFESSIONAL LEVEL CSS</h1>
 	</header>
 
 	<main>
@@ -61,245 +61,245 @@
 		-->
 		<section>
 			<h1>Hyphens</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Hyphenate Character</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Opacity</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Writing Mode</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Unicodeidi</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>minontent</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Inset</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Isolation</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Overscroll</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Justify Items</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Justify Self</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Tab Size</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Pointer Events</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Place Content</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Place Items</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Place Self</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Mix Blend Mode</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Offset</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Accent Color</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>User Select</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Cascading</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Visibility</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Layers</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>@ Rules</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Paged Media</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Printing</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Layouts</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Validations</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Important</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Multi columns</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Variables</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Functions</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Math Functions</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Specificity</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>Custom Properties</h1>
-		</section>
+		</section><hr>
 
 	</main>
 
