--- a/fundamentals/02-css/lesson-05-responsive.html
+++ b/fundamentals/02-css/lesson-05-responsive.html
@@ -52,7 +52,7 @@
 <body>
 
 	<header>
-		<h1># lesson-05-responsive</h1>
+		<h1>LESSON 05: RESPONSIVE CSS</h1>
 	</header>
 
 	<main>
@@ -61,56 +61,56 @@
 		-->
 		<section>
 			<h1>CSS RWD Introduction</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>CSS RWD Viewport</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>CSS RWD Grid View</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>CSS RWD Media Queries</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>CSS RWD Images</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>CSS RWD Videos</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>CSS RWD Frameworks</h1>
-		</section>
+		</section><hr>
 
 		<!-- 
 
 		-->
 		<section>
 			<h1>CSS Media Queries</h1>
-		</section>
+		</section><hr>
 
 	</main>
 
