--- a/fundamentals/02-css/lesson-01-beginner.html
+++ b/fundamentals/02-css/lesson-01-beginner.html
@@ -459,42 +459,38 @@
 			<h1>Measurement Units</h1>
 
       <h2>Absolute Units</h2>
-      <p class="unit-mm">Font size as 5mm</p>
-      <p class="unit-cm">Font size as 1cm</p>
-      <p class="unit-q">Font size as 40Q</p>
-      <p class="unit-in">Font size as .167in</p>
-      <p class="unit-pt">Font size as 12pt</p>
-      <p class="unit-pc">Font size as 1pc</p>
-      <p class="unit-px">Font size as 16px</p>
+      <p class="absolute-unit-mm">Font size as 5mm</p>
+      <p class="absolute-unit-cm">Font size as 1cm</p>
+      <p class="absolute-unit-q">Font size as 40Q</p>
+      <p class="absolute-unit-in">Font size as .167in</p>
+      <p class="absolute-unit-pt">Font size as 12pt</p>
+      <p class="absolute-unit-pc">Font size as 1pc</p>
+      <p class="absolute-unit-px">Font size as 16px</p>
+      <p class="absolute-unit-em">Font size as 4em</p>
+      <p class="absolute-unit-ex">Font size as 4ex</p>
+      <p class="absolute-unit-ch">Font size as 4ch</p>
+      <p class="absolute-unit-rem">Font size as 4rem</p>
+      <p class="absolute-unit-lh">Font size as 4lh</p>
+      <p class="absolute-unit-rlh">Font size as 4rlh</p>
 
       <h2>Relative Units</h2>
-
       <h3>By Height</h3>
-      <p class="relativeunit-dvh">Font size as 4dvh</p>
-      <p class="relativeunit-lvh">Font size as 4lvh</p>
-      <p class="relativeunit-svh">Font size as 4svh</p>
-      <p class="relativeunit-vb">Font size as 4vb</p>
-      <p class="relativeunit-vh">Font size as 4vh</p>
-      <p class="relativeunit-vmin">Font size as 4vmin</p>
+      <p class="relative-unit-dvh">Font size as 4dvh</p>
+      <p class="relative-unit-lvh">Font size as 4lvh</p>
+      <p class="relative-unit-svh">Font size as 4svh</p>
+      <p class="relative-unit-vb">Font size as 4vb</p>
+      <p class="relative-unit-vh">Font size as 4vh</p>
+      <p class="relative-unit-vmin">Font size as 4vmin</p>
 
       <h3>By Width</h3>
-      <p class="relativeunit-vw">Font size as 4vw</p>
-      <p class="relativeunit-vi">Font size as 4vi</p>
-      <p class="relativeunit-svw">Font size as 4svw</p>
-      <p class="relativeunit-lvw">Font size as 4lvw</p>
-      <p class="relativeunit-dvw">Font size as 4dvw</p>
+      <p class="relative-unit-vw">Font size as 4vw</p>
+      <p class="relative-unit-vi">Font size as 4vi</p>
+      <p class="relative-unit-svw">Font size as 4svw</p>
+      <p class="relative-unit-lvw">Font size as 4lvw</p>
+      <p class="relative-unit-dvw">Font size as 4dvw</p>
 
       <h3>By Both</h3>
-      <p class="relativeunit-vmax">Font size as 4vmax</p>
-
-      <h3>Other</h3>
-      <p class="relativeunit-em">Font size as 4em</p>
-      <p class="relativeunit-ex">Font size as 4ex</p>
-      <p class="relativeunit-ch">Font size as 4ch</p>
-      <p class="relativeunit-rem">Font size as 4rem</p>
-      <p class="relativeunit-lh">Font size as 4lh</p>
-      <p class="relativeunit-rlh">Font size as 4rlh</p>
-
+      <p class="relative-unit-vmax">Font size as 4vmax</p>
 		</section><hr>
 
     <!-- 
@@ -847,6 +843,13 @@
 
         <div class="pc-active">
           <h3>Pseudo-Class :active</h3>
+          <a href="">Click Me!</a><br>
+          <p>Click me to see effect!</p>
+          <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+          </ul>
         </div><br>
 
         <div class="pc-any-link">
@@ -899,6 +902,7 @@
 
         <div class="pc-focus">
           <h3>Pseudo-Class :focus</h3>
+          <input type="text" name="something" placeholder="Type something mate!">
         </div><br>
 
         <div class="pc-focus-visible">
@@ -977,6 +981,15 @@
 
         <div class="pc-nth-child-b">
           <h3>Pseudo-Class :nth-child()</h3>
+          <p>Second child of div</p>
+          <div>
+            <div>Div 1</div>
+            <div>Div 2</div>
+            <div>Div 3</div>
+            <div>Div 4</div>
+            <div>Div 5</div>
+            <div>Div 6</div>
+          </div>
         </div><br>
 
         <div class="pc-nth-last-child-b">
